@@ -1,25 +1,24 @@
 package com.example.backend.orders.service.impl;
 
+import com.example.backend.menuitem.entity.MenuItem;
+import com.example.backend.menuitem.repository.MenuItemRepository;
 import com.example.backend.orders.dto.OrderItemRequest;
+import com.example.backend.orders.dto.OrderItemResponse;
 import com.example.backend.orders.dto.OrderRequest;
 import com.example.backend.orders.dto.OrderResponse;
 import com.example.backend.orders.entity.Order;
 import com.example.backend.orders.entity.OrderItem;
-import com.example.backend.orders.mapper.OrderMapper;
 import com.example.backend.orders.repository.OrderRepository;
 import com.example.backend.orders.service.OrderService;
-
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.ThreadLocalRandom;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,107 +27,148 @@ import java.util.stream.Collectors;
 public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
-    private final OrderMapper orderMapper;
+    private final MenuItemRepository menuItemRepository;
 
     @Override
     public OrderResponse create(OrderRequest request) {
-
-        validateOrderRequest(request);
-
-        Order order = orderMapper.toOrder(request);
-
+        Order order = new Order();
         order.setOrderCode(generateOrderCode());
+        order.setUserId(request.getUserId());
+        order.setCustomerName(request.getCustomerName());
+        order.setCustomerPhone(request.getCustomerPhone());
+        order.setDeliveryAddress(request.getDeliveryAddress());
+        order.setOrderStatus("PENDING");
+        order.setPaymentMethod(
+                request.getPaymentMethod() != null && !request.getPaymentMethod().isBlank()
+                        ? request.getPaymentMethod()
+                        : "CASH"
+        );
+        order.setDeliveryMethod(
+                request.getDeliveryMethod() != null && !request.getDeliveryMethod().isBlank()
+                        ? request.getDeliveryMethod()
+                        : "PICKUP"
+        );
+        order.setNote(request.getNote());
+        order.setCreatedAt(LocalDateTime.now());
 
-        buildOrderItems(order, request.getItems());
+        BigDecimal totalAmount = BigDecimal.ZERO;
+        List<OrderItem> orderItems = new ArrayList<>();
 
-        Order savedOrder = orderRepository.save(order);
+        for (OrderItemRequest itemRequest : request.getItems()) {
+            MenuItem menuItem = menuItemRepository.findById(itemRequest.getItemId())
+                    .orElseThrow(() -> new EntityNotFoundException(
+                            "Không tìm thấy món với id = " + itemRequest.getItemId()
+                    ));
 
-        return orderMapper.toOrderResponse(savedOrder);
+            Double priceValue = menuItem.getSalePrice() != null
+                    ? menuItem.getSalePrice()
+                    : menuItem.getBasePrice();
+
+            if (priceValue == null) {
+                throw new IllegalArgumentException("Món " + menuItem.getItemName() + " chưa có giá");
+            }
+
+            BigDecimal unitPrice = BigDecimal.valueOf(priceValue);
+            BigDecimal lineTotal = unitPrice.multiply(BigDecimal.valueOf(itemRequest.getQuantity()));
+
+            OrderItem orderItem = OrderItem.builder()
+                    .order(order)
+                    .itemId(menuItem.getItemId())
+                    .quantity(itemRequest.getQuantity())
+                    .unitPrice(unitPrice)
+                    .lineTotal(lineTotal)
+                    .build();
+
+            orderItems.add(orderItem);
+            totalAmount = totalAmount.add(lineTotal);
+        }
+
+        order.setItems(orderItems);
+        order.setTotalAmount(totalAmount);
+
+        Order saved = orderRepository.save(order);
+        return toResponse(saved);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<OrderResponse> findAll() {
-
         return orderRepository.findAll()
                 .stream()
-                .map(orderMapper::toOrderResponse)
-                .collect(Collectors.toList());
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public OrderResponse findById(Long id) {
-
         Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ORDER_NOT_FOUND"));
-
-        return orderMapper.toOrderResponse(order);
+                .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy đơn hàng với id = " + id));
+        return toResponse(order);
     }
 
     @Override
     public void delete(Long id) {
-
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ORDER_NOT_FOUND"));
-
-        orderRepository.delete(order);
+        if (!orderRepository.existsById(id)) {
+            throw new EntityNotFoundException("Không tìm thấy đơn hàng với id = " + id);
+        }
+        orderRepository.deleteById(id);
     }
 
-    private void validateOrderRequest(OrderRequest request) {
+    private OrderResponse toResponse(Order order) {
+        List<Long> itemIds = order.getItems().stream()
+                .map(OrderItem::getItemId)
+                .distinct()
+                .toList();
 
-        if (request.getItems() == null || request.getItems().isEmpty()) {
-            throw new RuntimeException("ORDER_ITEMS_REQUIRED");
-        }
+        Map<Long, MenuItem> menuItemMap = menuItemRepository.findAllById(itemIds)
+                .stream()
+                .collect(Collectors.toMap(MenuItem::getItemId, m -> m));
 
-    }
+        List<OrderItemResponse> itemResponses = order.getItems().stream()
+                .map(item -> {
+                    MenuItem menuItem = menuItemMap.get(item.getItemId());
 
-    private void buildOrderItems(Order order, List<OrderItemRequest> itemRequests) {
+                    return OrderItemResponse.builder()
+                            .orderItemId(item.getOrderItemId())
+                            .itemId(item.getItemId())
+                            .itemName(menuItem != null ? menuItem.getItemName() : null)
+                            .imageUrl(menuItem != null ? menuItem.getImageUrl() : null)
+                            .quantity(item.getQuantity())
+                            .unitPrice(item.getUnitPrice())
+                            .lineTotal(item.getLineTotal())
+                            .build();
+                })
+                .toList();
 
-        List<OrderItem> items = new ArrayList<>();
-
-        BigDecimal totalAmount = BigDecimal.ZERO;
-
-        for (OrderItemRequest itemRequest : itemRequests) {
-
-            OrderItem item = orderMapper.toOrderItem(itemRequest);
-
-            item.setOrder(order);
-
-            BigDecimal lineTotal = itemRequest.getUnitPrice()
-                    .multiply(BigDecimal.valueOf(itemRequest.getQuantity()));
-
-            item.setLineTotal(lineTotal);
-
-            totalAmount = totalAmount.add(lineTotal);
-
-            items.add(item);
-        }
-
-        order.setItems(items);
-
-        order.setTotalAmount(totalAmount);
+        return OrderResponse.builder()
+                .orderId(order.getOrderId())
+                .orderCode(order.getOrderCode())
+                .userId(order.getUserId())
+                .customerName(order.getCustomerName())
+                .customerPhone(order.getCustomerPhone())
+                .deliveryAddress(order.getDeliveryAddress())
+                .orderStatus(order.getOrderStatus())
+                .paymentMethod(order.getPaymentMethod())
+                .deliveryMethod(order.getDeliveryMethod())
+                .totalAmount(order.getTotalAmount())
+                .note(order.getNote())
+                .createdAt(order.getCreatedAt())
+                .items(itemResponses)
+                .build();
     }
 
     private String generateOrderCode() {
+        LocalDate today = LocalDate.now();
+        String prefix = "ORD"
+                + today.getYear()
+                + String.format("%02d", today.getMonthValue())
+                + String.format("%02d", today.getDayOfMonth());
 
-        String prefix = "ORD";
+        long count = orderRepository.findAll().stream()
+                .filter(o -> o.getOrderCode() != null && o.getOrderCode().startsWith(prefix))
+                .count();
 
-        String timePart = LocalDateTime.now()
-                .format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
-
-        int randomPart = ThreadLocalRandom.current().nextInt(100, 1000);
-
-        String orderCode = prefix + timePart + randomPart;
-
-        while (orderRepository.existsByOrderCode(orderCode)) {
-
-            randomPart = ThreadLocalRandom.current().nextInt(100, 1000);
-
-            orderCode = prefix + timePart + randomPart;
-        }
-
-        return orderCode;
+        return prefix + String.format("%03d", count + 1);
     }
-
 }
